--- a/xxl-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/xxl-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,15 +1,15 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://bizvane-2018.mysql.polardb.rds.aliyuncs.com:3306/bizvane-job?useUnicode=true&characterEncoding=UTF-8
-xxl.job.db.user=bizvane_2018
-xxl.job.db.password=SF_bizvane20180613
+xxl.job.db.url=jdbc:mysql://localhost:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
+xxl.job.db.user=root
+xxl.job.db.password=
 
 ### xxl-job email
 xxl.job.mail.host=smtp.163.com
 xxl.job.mail.port=25
 xxl.job.mail.ssl=false
-xxl.job.mail.username=crm@bizvane.cn
-xxl.job.mail.password=BIZVANEcrm2018
+xxl.job.mail.username=xxx@163.com
+xxl.job.mail.password=xxxx
 xxl.job.mail.sendNick=《BIZVANE-JOB》
 
 ### xxl-job login
