修复一些问题 增加通过业务移除job的方法

--- a/xxl-job-admin/src/main/resources/xxl-job-admin.properties
+++ b/xxl-job-admin/src/main/resources/xxl-job-admin.properties
@@ -1,15 +1,15 @@
 ### xxl-job db  (use &amp; replace & in xml)
 xxl.job.db.driverClass=com.mysql.jdbc.Driver
-xxl.job.db.url=jdbc:mysql://localhost:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
+xxl.job.db.url=jdbc:mysql://192.168.1.180:3306/xxl-job?useUnicode=true&characterEncoding=UTF-8
 xxl.job.db.user=root
-xxl.job.db.password=
+xxl.job.db.password=root
 
 ### xxl-job email
 xxl.job.mail.host=smtp.163.com
 xxl.job.mail.port=25
 xxl.job.mail.ssl=false
-xxl.job.mail.username=xxx@163.com
-xxl.job.mail.password=xxxx
+xxl.job.mail.username=crm@bizvane.cn
+xxl.job.mail.password=BIZVANEcrm2018
 xxl.job.mail.sendNick=《BIZVANE-JOB》
 
 ### xxl-job login
